# agentk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md  key-lifecycle.md  mcp-proxy.md  mcp-shim-eval.md  productization-plan.md  public-readiness.md  release-checklist.md  roadmap.md  threat-model.md  v0.1-limit-disposition.md  v0.1-release-dry-run.md  v0.1-release-notes.md  v0.1-target.md  v0.2-alpha-closure.md  v0.2-alpha-release-notes.md
examples/: agentk.policy.toml  mcp-close-server.sh  mcp-close-session.jsonl  mcp-interop-server.sh  mcp-interop-session.jsonl  mcp-killer-demo-server.sh  mcp-killer-demo-session.jsonl  mcp-poisoned-error-server.sh  mcp-poisoned-server.sh  mcp-proxy-client-session.jsonl  mcp-proxy-poisoned-error-session.jsonl  mcp-server-session.jsonl  mcp-timeout-server.sh  mcp-timeout-session.jsonl  mcp-tool-descriptor.json  mcp-tool-request.json  mcp-tool-requests.jsonl  mcp-tool-response.json  replay-behavior-overrides.json  secret-refs-production.toml  secret-refs.toml  trusted-signers.toml
examples/policies/: browser-agent.toml  coding-agent.toml  research-agent.toml
src/: lib.rs  main.rs
