[package]
name = "agentk"
version = "0.1.0"
edition = "2024"
description = "Agent security kernel and installable MCP sidecar with policy, approvals, and forensic replay logs."
license = "MIT"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
ed25519-dalek = "2.2.0"
getrandom = "0.2.17"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
toml = "0.9.8"
